--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todo</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <script defer src="./js/app.js"></script>
   </head>
   <body>
     <header>
       <h1 id="logo">todo</h1>
 
-      <input type="checkbox" id="colorSchemeBtn" />
+      <button id="colorSchemeBtn"></button>
     </header>
     <main>
       <div class="card task-input-wrapper">
@@ -36,7 +37,7 @@
       </section>
 
       <ul class="nav-list-wrapper">
-        <li><a class="selected" href="javascript:;">All</a></li>
+        <li><a class="active" href="javascript:;">All</a></li>
         <li><a href="javascript:;">Active</a></li>
         <li><a href="javascript:;">Completed</a></li>
       </ul>
